--- a/sass/home.scss
+++ b/sass/home.scss
@@ -18,4 +18,12 @@
     .imageLink:hover {
         cursor: pointer;
     }
+
+    #theImageLink:hover {
+        cursor: pointer;
+    }
+
+    a:hover {
+        cursor: pointer;
+    }
 }
