--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -5,6 +5,7 @@
 
 * {
     font-family: CrimsonText !important;
+    overflow-x: hidden !important;
 }
 
 html {
@@ -12,16 +13,15 @@ html {
 }
 
 body {
-    border: none;
-    margin: 0;
-    overflow-x: hidden;
+    border: none !important;
+    margin: 0 !important;
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 h1, h2, h3, h4, h5 {
-    padding: 0;
-    margin: 0;
+    padding: 0 !important;
+    margin: 0 !important;
 }
