Home Page Complete

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -11,12 +11,14 @@
 
 html {
     scroll-behavior: smooth !important;
+    background: black;
 }
 
 body {
     border: none !important;
     margin: 0 !important;
     scroll-behavior: smooth !important;
+    background: black;
 }
 
 a {
