--- a/sass/home.scss
+++ b/sass/home.scss
@@ -82,6 +82,7 @@
         background: white;
         color: black;
         border: none;
+        border-radius: 0 !important;
         padding: 10px 25px;
     }
 
