--- a/public/styles/font.scss
+++ b/public/styles/font.scss
@@ -18,4 +18,17 @@
   font-weight: lighter;
   font-style: normal;
 }
-  
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap') format('truetype');
+  font-weight: medium;
+  font-style: normal;
+}
