--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1,5 +1,14 @@
 @use "brand.scss";
 //Global Styles
+html
+{
+    scroll-behavior: smooth;
+    body
+    {
+        padding: 0;
+        margin: 0;
+    }
+}
 a
 {
     color: brand.$green;
@@ -11,128 +20,90 @@ a:hover
     opacity: 0.75;
     text-decoration: underline;
 }
-html
+.creamBtn
 {
-    scroll-behavior: smooth;
-    body
+    background-color: brand.$cream !important;
+    border: 0.025em solid brand.$green !important;
+    color: brand.$green !important;
+    padding: 1em 2em !important;
+}
+.creamBtn:hover
+{
+    text-decoration: underline;
+    opacity: 0.75;
+    cursor: pointer;
+}
+.showMobileNav
+{
+    transform: translateY(0) !important;
+}
+//Navbar Desktop
+#navbarDesktop
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em 10em;
+    background-color: brand.$cream;
+    border-bottom: 0.025em solid brand.$green;
+    z-index: 10;
+    div
     {
-        padding: 0;
-        margin: 0;
-        //Header - Navigation Bar
-        header
+        display: flex;
+        align-items: center;
+        img
         {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: medium;
-            background-color: brand.$cream;
+            width: 100% !important;
+            height: auto !important;
+            max-width: 150px !important;
+        }
+        ul
+        {
             display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            position: fixed;
-            width: 100%;
-            padding: 0.75em 0em;
-            div
+            padding: 0;
+            li
             {
-                img
-                {
-                    width: 100% !important;
-                    height: auto !important;
-                    max-width: 118.5px;           
-                }
-                ul
-                {
-                    display: flex;
-                    list-style-type: none;
-                    padding: 0;
-                    li
-                    {
-                        padding: 0 1em;
-                    }
-                }
-
-                button
-                {
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: medium;
-                    padding: 0.65em 1.25em;
-                    cursor: pointer;
-                    border: 0.100em solid brand.$green;
-                    background-color: brand.$cream;
-                    color: brand.$green;
-                }
-                button:hover
-                {
-                    opacity: 0.75;
-                    text-decoration: underline;
-                }
+                list-style-type: none;
+                padding: 0 1em;
             }
         }
     }
 }
-
-@media (max-width: 999px)
+#navbarMobile
 {
-    html
+    .navMobileHeader
     {
-        scroll-behavior: smooth;
-        body
+        display: flex;
+        padding: 1em 1.5em;
+        justify-content: space-between;
+        background-color: brand.$cream;
+        z-index: 1 !important;
+        img
         {
-            padding: 0;
-            margin: 0;
-            //Header - Navigation Bar
-            header
-            {
-                font-family: 'Montserrat', sans-serif;
-                font-weight: medium;
-                background-color: brand.$cream;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                width: 100%;
-                padding: 0.75em 0em;
-                .navLinks
-                {
-                    display: none !important;
-                }
-                div
-                {
-                    img
-                    {
-                        width: 100% !important;
-                        height: auto !important;
-                        max-width: 118.5px;           
-                    }
-                    ul
-                    {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        list-style-type: none;
-                        padding: 0;
-                        li
-                        {
-                            padding: 1em 1em;
-                        }
-                    }
-
-                    button
-                    {
-                        font-family: 'Montserrat', sans-serif;
-                        font-weight: medium;
-                        padding: 0.65em 1.25em;
-                        cursor: pointer;
-                        border: 0.100em solid brand.$green;
-                        background-color: brand.$cream;
-                        color: brand.$green;
-                    }
-                    button:hover
-                    {
-                        opacity: 0.75;
-                        text-decoration: underline;
-                    }
-                }
-            }
+            width: 100% !important;
+            height: auto !important;
+            max-width: 150px !important;
         }
     }
+    .navMobileLinks
+    {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: brand.$cream;
+        transform: translateY(-3000px);
+        transition: ease-in-out 0.3s;
+        z-index: -1 !important;
+        ul
+        {
+            list-style-type: none;
+            text-align: center;
+            padding: 0;
+            li
+            {
+                padding: 1em 0;
+            }
+        }
+    }   
 }
